# engineer_vision

./: .gitignore
src/arm_controller_pkg/: CMakeLists.txt  package.xml
src/arm_controller_pkg/include/: state_assessor.hpp
src/arm_controller_pkg/src/: state_assessor_node.cpp
src/engineer_vision_pkg/: CMakeLists.txt  package.xml
src/engineer_vision_pkg/config/: camera_info.yaml
src/engineer_vision_pkg/include/: image_processer.hpp  redeem_box.hpp
src/engineer_vision_pkg/launch/: launch.py
src/engineer_vision_pkg/src/: RB_detector_node.cpp  video_capturer_node.cpp
src/movement_planner_pkg/: CMakeLists.txt  package.xml
src/movement_planner_pkg/include/: move_group.hpp  mtc.hpp
src/movement_planner_pkg/src/: RB_builder_node.cpp  mtc_node.cpp  mtc_node_tutorial.cpp  path_planning_node.cpp
src/rm_vision/: CMakeLists.txt  package.xml
src/rm_vision/launch/: launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: launch.py
src/robot_description/urdf/: robot_test.urdf
src/ros2_mindvision_camera/launch/: mv_launch.py
